objects/EXPRN__Alert_Monitored_Set_Name__c.object
<CustomObject>
    <description>Collection of accounts being monitored for alerts</description>
    <fields>
        <fullName>EXPRN__Account_Count__c</fullName>
        <label>Account Count</label>
        <summaryForeignKey>EXPRN__Alert_Monitored_Set__c.EXPRN__Alert_Monitored_Set_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EXPRN__BIQ_Configuration__c</fullName>
        <label>BIQ Configuration</label>
        <referenceTo>EXPRN__BIQ_Configuration__c</referenceTo>
        <relationshipLabel>Experian Alert Monitored Set Names</relationshipLabel>
        <relationshipName>Alert_Monitored_Set_Names</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EXPRN__ClientSubcodeID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Subcode ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EXPRN__Subscriber_Code__c.EXPRN__Type__c</field>
                <operation>equals</operation>
                <value>Master</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EXPRN__Subscriber_Code__c</referenceTo>
        <relationshipName>Alert_Monitored_Set_Names</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__Retention_Period__c</fullName>
        <inlineHelpText>Number of days after which the alerts are automatically deleted from the system</inlineHelpText>
        <label>Retention Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                    <default>true</default>
                    <label>30</label>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EXPRN__Subscriber_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscriber Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EXPRN__Subscriber_Code__c.EXPRN__Type__c</field>
                <operation>equals</operation>
                <value>AMS</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EXPRN__Subscriber_Code__c</referenceTo>
        <relationshipName>Alert_Monitored_Set_Names1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Experian Alert Monitored Set Name</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experian Alert Monitored Set Names</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>